# vault-unseal

./: .clog.toml  .golangci.yaml  .yamllint  BUILD.bazel  Dockerfile  MODULE.bazel  README.md  cluster.go  config.go  config.json  consts.go  context.go  credentials.go  credentials_local.go  go.mod  go.sum  logging.go  main.go  vault.go  wire.go  wire_gen.go
.github/workflows/: ci-code-approval.yml  ci-docker.yml  create-release.yml
charts/vault-unseal/: Chart.yaml  helm_lint.sh  values.yaml
charts/vault-unseal/templates/: clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  deployment.yaml  hpa.yaml  serviceaccount.yaml
encryption/: crypto.go
helm/: values.yaml
helm/templates/: _helpers.tpl  deployment.yaml  service.yaml
helm/templates/tests/: test-connection.yaml
magefiles/: alias.go  build.go  deps.go  helpers.go
