bazel_dep(name = "rules_go", version = "0.53.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.42.0", repo_name = "bazel_gazelle")
bazel_dep(name = "aspect_bazel_lib", version = "2.9.4")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.1")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
go_deps.gazelle_default_attributes(
    build_file_generation = "auto",
    directives = [
        "gazelle:proto disable",
    ],
)
use_repo(
    go_deps,
    "com_github_caarlos0_env_v10",
    "com_github_hashicorp_vault_api",
    "com_github_jacobbrewer1_web",
    "io_k8s_api",
    "io_k8s_client_go",
)
